--- a/app/src/main/res/drawable-anydpi/ic_action_backbtn.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_backbtn.xml
@@ -1,10 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="#333333">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
+    android:viewportWidth="17.6"
+    android:viewportHeight="17.6"
+    android:tint="#FFFFFF">
+  <group android:translateX="-3.2"
+      android:translateY="-3.2">
+      <path
+          android:fillColor="#FF000000"
+          android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
+  </group>
 </vector>
