--- a/app/src/main/res/layout/app_main_assessment_detail.xml
+++ b/app/src/main/res/layout/app_main_assessment_detail.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    android:id="@+id/mainTerm"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/MentorCourse"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,28 +12,31 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/termtoolbar"
+            android:id="@+id/detailAssessmentToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/design_default_color_primary_dark"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:menu="@menu/details_toolbar"
+            app:title="@string/Assessdetails"
+            >
 
-        <ListView
-            android:id="@+id/termListView"
+        </android.support.v7.widget.Toolbar>
+
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white" />
+            android:layout_height="match_parent">
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.design.widget.AppBarLayout>
 
-
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/addTerm"
+        android:id="@+id/saveAssessment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/design_default_color_primary_dark"
-        app:srcCompat="@drawable/ic_menu_add" />
+        app:srcCompat="@android:drawable/ic_menu_save" />
 
 </android.support.design.widget.CoordinatorLayout>
