--- a/app/src/main/res/menu/details_toolbar.xml
+++ b/app/src/main/res/menu/details_toolbar.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/action_add"
         android:icon="@drawable/ic_action_backbtn"
-        android:title="Save"
-        app:showAsAction="always" />
+        android:orderInCategory="100"
+        android:title="@string/saveToolbar"
+        app:showAsAction="ifRoom"
+        app:theme="@style/ThemeOverlay.AppCompat" />
     <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_action_delete"
-        android:title="Delete"
-        app:showAsAction="always" />
+        android:orderInCategory="100"
+        android:title="@string/menu_delete"
+        app:showAsAction="ifRoom" />
 </menu>
