--- a/app/src/main/res/menu/share_toolbar.xml
+++ b/app/src/main/res/menu/share_toolbar.xml
@@ -5,10 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_add"
-        android:icon="@drawable/ic_action_backbtn"
+        android:id="@+id/share_via_Email"
+        android:icon="@drawable/ic_menu_email"
         android:orderInCategory="100"
-        android:title="@string/saveToolbar"
+        android:title="email"
         app:showAsAction="ifRoom"
         app:theme="@style/ThemeOverlay.AppCompat" />
     <item
@@ -16,11 +16,5 @@
         android:icon="@drawable/ic_menu_sms"
         android:orderInCategory="100"
         android:title="sms"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_delete"
-        android:icon="@drawable/ic_action_delete"
-        android:orderInCategory="100"
-        android:title="@string/menu_delete"
         app:showAsAction="ifRoom" />
 </menu>
