--- a/app/src/main/res/layout/app_bar_main_term.xml
+++ b/app/src/main/res/layout/app_bar_main_term.xml
@@ -20,8 +20,6 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addTerm"
         android:layout_width="wrap_content"
@@ -41,6 +39,7 @@
             android:layout_height="732dp"
             android:layout_marginTop="55dp"
             android:background="@android:color/white"
+            android:scrollbars="horizontal|vertical"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
