--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
         <item name="android:textSize">12sp</item>
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:hint">"mm/dd/yy"</item>
+        <item name="android:hint">"mm/dd/yyyy"</item>
     </style>
 
 </resources>
