--- a/app/src/main/res/layout/app_main_term_detail.xml
+++ b/app/src/main/res/layout/app_main_term_detail.xml
@@ -46,74 +46,50 @@
             android:id="@+id/reminderLabel2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="360dp"
-            android:text="Courses"
-            android:textColor="@android:color/background_dark"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/notesEditMultiLine"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_marginStart="190dp"
-            android:layout_marginLeft="190dp"
-            android:layout_marginTop="244dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
-            android:background="@android:color/background_light"
-            android:ems="10"
-            android:gravity="top"
-            android:hint="Notes"
-            android:inputType="textMultiLine"
-            android:singleLine="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <CheckBox
-            android:id="@+id/reminderStartDatechk"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="252dp"
-            android:background="@android:color/background_light"
-            android:text="Start Date"
+            android:layout_marginTop="336dp"
+            android:text="Available Courses"
+            android:textColor="@android:color/background_dark"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/reminderLabel"
-            android:layout_width="85dp"
+            android:id="@+id/reminderLabel4"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="228dp"
-            android:text="Reminder"
+            android:layout_marginStart="248dp"
+
+            android:layout_marginLeft="248dp"
+            android:layout_marginTop="336dp"
+            android:text="Assigned Courses"
             android:textColor="@android:color/background_dark"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <CheckBox
-            android:id="@+id/reminderEndDateChk"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="284dp"
+        <EditText
+            android:id="@+id/TermnotesEditMultiLine"
+            android:layout_width="347dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="18dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="232dp"
+            android:layout_marginEnd="46dp"
+            android:layout_marginRight="46dp"
             android:background="@android:color/background_light"
-            android:text="End Date"
+            android:ems="10"
+            android:gravity="top"
+            android:hint="Term Descrition"
+            android:inputType="textMultiLine"
+            android:singleLine="false"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/StartDateEditText"
+            android:id="@+id/TermStartDateEditText"
             style="@style/custom_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -171,7 +147,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/EndDateEditText"
+            android:id="@+id/TermEndDateEditText"
             style="@style/custom_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -190,33 +166,34 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ListView
-            android:id="@+id/coursesListView"
-            android:layout_width="361dp"
-            android:layout_height="262dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="388dp"
+            android:id="@+id/TermassignedCourseList"
+            android:layout_width="183dp"
+            android:layout_height="260dp"
+            android:layout_marginTop="368dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             android:background="@android:color/background_light"
             android:scrollbars="horizontal|vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.244"
+            app:layout_constraintHorizontal_bias="0.991"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ListView
+            android:id="@+id/TermavailableCourseList"
+            android:layout_width="182dp"
+            android:layout_height="260dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="368dp"
+
+            android:background="@android:color/background_light"
+            android:scrollbars="horizontal|vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.029"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/saveTerm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:backgroundTint="@color/design_default_color_primary_dark"
-        app:srcCompat="@android:drawable/ic_menu_save"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.design.widget.CoordinatorLayout>
