--- a/app/src/main/res/layout/app_main_course_detail.xml
+++ b/app/src/main/res/layout/app_main_course_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/TermCourse"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -35,13 +34,10 @@
             android:id="@+id/CourseAssignedMentorsList"
             android:layout_width="187dp"
             android:layout_height="244dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="660dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
             android:background="@android:color/background_light"
             android:scrollbars="horizontal|vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -62,13 +58,10 @@
             android:id="@+id/CourseAvailableMentorsList"
             android:layout_width="187dp"
             android:layout_height="247dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="216dp"
             android:layout_marginTop="660dp"
             android:background="@android:color/background_light"
             android:scrollbars="horizontal|vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.004"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -89,8 +82,7 @@
             android:id="@+id/reminderLabel2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
+            android:layout_marginStart="48dp"
             android:layout_marginTop="360dp"
             android:text="Assessments"
             android:textColor="@android:color/background_dark"
@@ -102,9 +94,8 @@
             android:id="@+id/reminderLabel4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="284dp"
+            android:layout_marginStart="272dp"
 
-            android:layout_marginLeft="284dp"
             android:layout_marginTop="360dp"
             android:text="Assigned"
             android:textColor="@android:color/background_dark"
@@ -128,21 +119,16 @@
 
         <EditText
             android:id="@+id/CourseNotesEditMultiLine"
-            android:layout_width="match_parent"
+            android:layout_width="237dp"
             android:layout_height="90dp"
-            android:layout_marginStart="190dp"
-            android:layout_marginLeft="190dp"
-            android:layout_marginTop="244dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
+            android:layout_marginStart="144dp"
+            android:layout_marginTop="248dp"
             android:background="@android:color/background_light"
             android:ems="10"
             android:gravity="top"
             android:hint="Notes"
             android:inputType="textMultiLine"
             android:singleLine="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -189,14 +175,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
             android:layout_marginTop="188dp"
-            android:layout_marginEnd="253dp"
-            android:layout_marginRight="253dp"
             android:background="@android:color/background_light"
             android:ems="10"
             android:inputType="date"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -247,16 +229,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="216dp"
-            android:layout_marginLeft="216dp"
             android:layout_marginTop="188dp"
-            android:layout_marginEnd="46dp"
-            android:layout_marginRight="46dp"
             android:background="@android:color/background_light"
             android:ems="10"
             android:inputType="date"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -264,13 +241,10 @@
             android:id="@+id/CourseAssignedAssessmentList"
             android:layout_width="187dp"
             android:layout_height="244dp"
+            android:layout_marginStart="216dp"
             android:layout_marginTop="384dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
             android:background="@android:color/background_light"
             android:scrollbars="horizontal|vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -280,12 +254,9 @@
             android:layout_width="187dp"
             android:layout_height="247dp"
             android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
             android:layout_marginTop="384dp"
             android:background="@android:color/background_light"
             android:scrollbars="horizontal|vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.004"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
