--- a/app/src/main/res/layout/app_main_course_detail.xml
+++ b/app/src/main/res/layout/app_main_course_detail.xml
@@ -9,7 +9,9 @@
     <android.support.constraint.ConstraintLayout
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
 
         <android.support.design.widget.AppBarLayout
@@ -31,7 +33,7 @@
         </android.support.design.widget.AppBarLayout>
 
         <ListView
-            android:id="@+id/CourseAssignedMentorsList"
+            android:id="@+id/CourseAvailableMentorsList"
             android:layout_width="187dp"
             android:layout_height="244dp"
             android:layout_marginStart="5dp"
@@ -55,7 +57,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ListView
-            android:id="@+id/CourseAvailableMentorsList"
+            android:id="@+id/CourseAssignedMentorsList"
             android:layout_width="187dp"
             android:layout_height="247dp"
             android:layout_marginStart="216dp"
