--- a/app/src/main/res/menu/details_toolbar.xml
+++ b/app/src/main/res/menu/details_toolbar.xml
@@ -5,6 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_add"
+        android:icon="@drawable/ic_action_plus"
+        android:orderInCategory="100"
+        android:title="@string/saveToolbar"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_save"
         android:icon="@drawable/ic_menu_save"
         android:orderInCategory="100"
