--- a/app/src/main/res/layout/app_main_term_detail.xml
+++ b/app/src/main/res/layout/app_main_term_detail.xml
@@ -8,7 +8,10 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        >
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
